changed index.html title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template</title>
+    <title>react-redux-webpack-generic-starter</title>
 </head>
 <body>
     <div id="root"></div>
